styles/global.scss
html {
  padding: 0px;
  margin: 0px auto;
  background-color: #f8fbff;
}

body {
  padding: 0px;
  margin: 0px;
}

a {
  text-decoration: none;
  color: #4172b0;
}

h1 {
  color: #333;
  font-size: 28px;
}

h2 {
  color: #333;
  font-size: 22px;
}

h3 {
  color: #333;
}

p {
  margin: 0px 0px 10px;
  font-size: 16px;
  color: #333;
}

span {
  color: rgb(55, 53, 47);
  font-size: 16px;
}

ul {
  line-height: 1.5;
}

li {
  color: rgb(55, 53, 47);
}

blockquote {
  margin: 10px 0px 30px;
  padding: 10px 10px 10px 15px;
  font-weight: bold;
  color: rgba(117, 117, 117, 1);
  border-left: 5px solid #ccc;
  background: #f1f1f1;
  & p {
    margin: 0;
  }
}

table {
  width: 100%;
  color: rgb(55, 53, 47);
}

th {
  text-align: start;
  border-bottom: solid 1.5px #8ab2e4;
}

td {
  padding: 17px 10px;
  text-align: start;
  border-right: 1px solid #dbebff;
  border-bottom: 1px solid #8ab2e4;
}

pre {
  overflow: scroll;
  padding: 30px;
  border-radius: 10px;
  color: #e9e9e9;
  background-color: #232323;
}

.hljs-function,
.hljs-tag,
.hljs-name,
.xml {
  color: #e9e9e9;
}

.hljs-attr,
.hljs-keyword,
.hljs-literal {
  color: #c26230;
}

.hljs-subst {
  color: #519f50;
}

.hljs-string {
  color: #a5c261;
}

.hljs-title {
  color: #ffc66d;
}

.hljs-built_in {
  color: #6dacde;
}

.hljs-params {
  color: #d0d0ff;
}

.hljs-number {
  color: #a5c261;
}

.hljs-comment {
  color: #bc9458;
}

img {
  width: 350px;
}

